# Waisman-Projects

Data Handler/: CMakeLists.txt  DataHandler.cpp  DataHandler.h  People.csv  RPM.csv  main.cpp
